--- a/profiles/templates/profiles/global-base-ui/sidebar_menu.html
+++ b/profiles/templates/profiles/global-base-ui/sidebar_menu.html
@@ -4,19 +4,19 @@
     <div class="ui inverted bottom attached segment pushable">
         <div class="ui inverted labeled icon left inline vertical sidebar menu" id = "sidebar" >
             {% if request.session.session_user_position == "Handler" %}
-            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Dashboard</a>
+            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Homepage</a>
             <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
             <a class="item" href="{% url 'unitmanagement:request_form'%}"><i class="folder open icon"></i>Unit Management</a>
             {% endif %}
 
             {% if request.session.session_user_position == "Administrator" %}
-            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Dashboard</a>
+            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Homepage</a>
             <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
             <a class="item" href="{% url 'planningandacquiring:K9_list'%}"><i class="clipboard list icon"></i>Planning and Acquiring</a>
             {% endif %}
 
             {% if request.session.session_user_position == "Veterinarian" %}
-            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Dashboard</a>
+            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Homepage</a>
             <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
             <a class="item" href="{% url 'planningandacquiring:K9_list'%}"><i class="clipboard list icon"></i>Planning and Acquiring</a>
             <a class="item" href="{% url 'training:training_records'%}"><i class="paw icon"></i>Training</a>
