--- a/profiles/templates/profiles/sidebar_training.html
+++ b/profiles/templates/profiles/sidebar_training.html
@@ -8,6 +8,7 @@
                     <div class="ui grid">
                         <div class="three wide column">
                                 <div class="ui tiny pointing vertical menu" style="width:230px;">
+                                    {% if request.session.session_user_position == "Administrator" %}
                                         <a class="item"> <b>Training Menu</b></a>
                                         <a href="{% url 'training:training_records'%}" class="item">Training Records
                                             <i class="folder open icon"></i>
@@ -15,6 +16,7 @@
                                         <a href="{% url 'training:classify_k9_list'%}" class="item">Classify K9's
                                             <i class="clipboard check icon"></i>
                                         </a>
+                                    {% endif %}
                                     </div>
                         </div>
                         <!>
