--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -9,6 +9,18 @@
                         <div class="three wide column">
                                 <div class="ui tiny pointing vertical menu" style="width:230px;">
                                     <a class="item"> <b>Unit Management Menu</b></a>
+                                    {% if request.session.session_user_position == "Administrator" %}
+                                    <a href="{% url 'profiles:add_User_form'%}" class="item">Add User Form
+                                        <i class="user plus icon"></i>
+                                    </a>
+                                    <a href="{% url 'profiles:user_list'%}" class="item">User List
+                                        <i class="address book icon"></i>
+                                    </a>
+                                    <a href="{% url 'unitmanagement:request_list'%}" class="item">Damaged Equipment List
+                                        <i class="clipboard list icon"></i>
+                                    </a>
+                                    {% endif %}
+
                                     {% if request.session.session_user_position == "Veterinarian" %}
                                     <a href="{% url 'profiles:add_User_form'%}" class="item">Add User Form
                                         <i class="user plus icon"></i>
@@ -27,9 +39,6 @@
                                     </a>
                                     <a href="{% url 'unitmanagement:health_record'%}" class="item">Health Records
                                         <i class="h square icon"></i>
-                                    </a>
-                                    <a href="{% url 'unitmanagement:request_list'%}" class="item">Damaged Equipment List
-                                        <i class="clipboard list icon"></i>
                                     </a>
                                     {% endif %}
 
