--- a/profiles/templates/profiles/sidebar_inventory.html
+++ b/profiles/templates/profiles/sidebar_inventory.html
@@ -9,9 +9,22 @@
                         <div class="three wide column">
                                 <div class="ui tiny pointing vertical menu" style="width:230px;">
                                         <a class="item"> <b>Inventory Menu</b></a>
+                                        {% if request.session.session_user_position == "Veterinarian" %}
                                         <a href="{% url 'inventory:medicine_add'%}" class="item">Add Medicine
                                                 <i class="plus circle icon"></i>
-                                        </a>  
+                                        </a>
+                                        <a href="{% url 'inventory:medicine_inventory_list'%}" class="item">Medicine Inventory List View
+                                                <i class="clipboard list icon"></i>
+                                        </a>
+                                        <a href="{% url 'inventory:food_inventory_list'%}" class="item">Dog Food Inventory List View
+                                                <i class="clipboard list icon"></i>
+                                        </a>
+                                        <a href="{% url 'inventory:miscellaneous_inventory_list'%}" class="item">Miscellaneous Inventory List View
+                                                <i class="clipboard list icon"></i>
+                                        </a>
+                                        {% endif %}
+
+                                        {% if request.session.session_user_position == "Administrator" %}
                                         <a href="{% url 'inventory:food_add'%}" class="item">Add Dog Food
                                                 <i class="plus circle icon"></i>
                                         </a> 
@@ -27,6 +40,7 @@
                                         <a href="{% url 'inventory:miscellaneous_inventory_list'%}" class="item">Miscellaneous Inventory List View
                                                 <i class="clipboard list icon"></i>
                                         </a>
+                                        {% endif %}
                                 </div>
                         </div>
                         <!>
