--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -9,20 +9,11 @@
                             <div class="ui tiny pointing vertical menu" style="width:230px;">
                                 <a class="item"> <b>Planning and Acquiring Menu</b></a>
                                 {% if request.session.session_user_position == "Veterinarian" %}
-                                <a href="{% url 'planningandacquiring:add_donated_K9_form'%}" class="item">Add K9 Data Form
-                                        <i class="plus circle icon"></i>
-                                </a>  
                                 <a href="{% url 'planningandacquiring:add_K9_parents_form'%}" class="item">Breeding Form
                                         <i class="plus circle icon"></i>
                                 </a> 
                                 <a href="{% url 'planningandacquiring:K9_list'%}" class="item">K9 List View
                                         <i class="list alternate icon"></i>
-                                </a>
-                                 <a href="{% url 'planningandacquiring:K9_forecast'%}" class="item">K9 Forecasting
-                                       <i class="chart line icon"></i>
-                                </a>
-                                <a class="item">Budgeting
-                                        <i class="money bill alternate outline icon"></i>
                                 </a>
                                  <a class="item">Breeding Recommendation
                                         <i class="money bill alternate outline icon"></i>
@@ -30,6 +21,12 @@
                                 {% endif %}
 
                                 {% if request.session.session_user_position == "Administrator" %}
+                                <a href="{% url 'planningandacquiring:add_donated_K9_form'%}" class="item">Add K9 Data Form
+                                        <i class="plus circle icon"></i>
+                                </a>
+                                <a href="{% url 'planningandacquiring:K9_list'%}" class="item">K9 List View
+                                        <i class="list alternate icon"></i>
+                                </a>
                                  <a href="{% url 'planningandacquiring:K9_forecast'%}" class="item">K9 Forecasting
                                        <i class="chart line icon"></i>
                                 </a>
